// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryTimelineBar.vue should render a timeline bar 1`] = `
<div
  class="bar"
  style="width: 63%;"
  title="Some title"
>
  
  Some title

</div>
`;

exports[`QueryTimelineBar.vue should render a timeline bar with 0 total (div 0 check) 1`] = `
<div
  class="bar"
  style="width: 0%;"
>
  
  

</div>
`;
